Fixing up urls.

--- a/analytics/templates/analytics.html
+++ b/analytics/templates/analytics.html
@@ -138,7 +138,7 @@
 						Influence
 					</span>
 					<span class="follow">
-						<img src="{% url static images/analytics/follow.png %}">
+						<img src="{% url static 'images/analytics/follow.png' %}">
 					</span>
 				</span>
 				
