--- a/core/templates/blogvip_flow.html
+++ b/core/templates/blogvip_flow.html
@@ -136,7 +136,7 @@
 	<div id="event-title">BlogWorld 2010 Panel Spotlight</div>
 	<div id="detsbg">
 		<div id="info">Blogging Super Panel Live Feedback</div> 
-		<div id="goog"><img src="{% url static 'images/speakers.png' }"></div>
+		<div id="goog"><img src="{% url static 'images/speakers.png' %}"></div>
 		<p>Is your blog optimizing its potential to make money? Find out! This panel of the top money making bloggers of all time will spend a few hours reviewing your blogs live. So get there early and step up to the mic and be ready to have your blog picked apart by the pros who know.<br><br>
 			John Chow, JohnChow.com<br>
 			Darren Rowse, Problogger.com<br>
@@ -144,7 +144,7 @@
 			Brian Clark, Copyblogger.com<br>
 			Zac Johnson, ZacJohnson.com
 		</p>
-		<div id="blogworld"><img src="{% url static 'images/blogworld.png' }"></div>
+		<div id="blogworld"><img src="{% url static 'images/blogworld.png' %}"></div>
 	</div>
 	<div id="detsfooter"></div>
 </div> 
