Fixing url tag in blog_vip_flow.

--- a/core/templates/blogvip_flow.html
+++ b/core/templates/blogvip_flow.html
@@ -54,7 +54,7 @@
 			<br/>
 			<div class="logoutnow" href="">logout from facebook</div>
 			{% else %}
-			<img id="facebook-login" src="{% url static 'images/facebook-button.png'}"/>
+			<img id="facebook-login" src="{% url static 'images/facebook-button.png' %}"/>
 			{% endif %}
 		</div>
 
