--- a/core/templates/details.html
+++ b/core/templates/details.html
@@ -5,7 +5,7 @@
 {% block content %}
 <h2>Event Details.</h2>
 {% if event %}
-<a href=/simpz/event_home/{{event.id}}>{{ event.name }}</a> <br />
+<a href={% url event_home event_id=event.id %}>{{ event.name }}</a> <br />
 Event Id: {{ event.id }} <br />
 Description: {{event.description}} <br />
 Start Time: {{event.event_date_time_start}} <br />
@@ -13,7 +13,7 @@ End Time: {{event.event_date_time_end}} <br />
 Capacity: {{event.capacity}} <br />
 Venue: {{event.venue }} <br />
 Venue Address: {{event.venue_address}} <br />
-Organizer: <a href="/simpz/user_details/{{event.organizer_id}}">{{event.organizer_id}}</a>
+Organizer: <a href="{% url user_details user_id=event.organizer_id %}">{{event.organizer_id}}</a>
 
 <hr/>
 <h1>INVITES</h1>
@@ -29,10 +29,10 @@ Organizer: <a href="/simpz/user_details/{{event.organizer_id}}">{{event.organize
 {% for invite in invites %}
 
 <tr>
-<td><a href="/simpz/invite/{{invite.id}}/">{{invite.id}}</a></td>
-<td><a href="/simpz/invite/{{invite.id}}/">{{invite.from_invite.id}}</a></td>
-<td><a href="/simpz/user_details/{{invite.from_user_id}}/">{{invite.from_user_id}}</a>&nbsp;{{invite.from_user.username}}</td>
-<td><a href="/simpz/user_details/{{invite.to_user_id}}/">{{invite.to_user_id}}</a></td>
+<td><a href="{% url event_invite invide_id=invite.id %}">{{invite.id}}</a></td>
+<td><a href="{% url event_invite invide_id=invite.id %}">{{invite.from_invite.id}}</a></td>
+<td><a href="{% url user_details user_id=invite.from_user_id %}">{{invite.from_user_id}}</a>&nbsp;{{invite.from_user.username}}</td>
+<td><a href="{% url user_details user_id=invite.to_user_id %}">{{invite.to_user_id}}</a></td>
 <td>{{invite.message}}</td>
 <td>{{invite.created_at}}</td>
 </tr>
@@ -53,10 +53,10 @@ Organizer: <a href="/simpz/user_details/{{event.organizer_id}}">{{event.organize
 {% for user in attendees %}
 
 <tr>
-<td><a href="/simpz/user_details/{{user.id}}/">{{user.id}}</a></td>
+<td><a href="{% url user_details user_id=user.id %}">{{user.id}}</a></td>
 <td>{{user.name}}</td>
 <td>{{user.username}}</td>
-<td><a href="/simpz/user_details/{{user.id}}"><img src="{{user.profile_pic}}" /></a></td>
+<td><a href="{% url user_details user_id=user.id %}"><img src="{{user.profile_pic}}" /></a></td>
 </tr>
 {% endfor %}
 <table>
@@ -73,10 +73,10 @@ Organizer: <a href="/simpz/user_details/{{event.organizer_id}}">{{event.organize
 {% for user in attendees_maybe %}
 
 <tr>
-<td><a href="/simpz/user_details/{{user.id}}/">{{user.id}}</a></td>
+<td><a href="{% url user_details user_id=user.id %}">{{user.id}}</a></td>
 <td>{{user.name}}</td>
 <td>{{user.username}}</td>
-<td><a href="/simpz/user_details/{{user.id}}"><img src="{{user.profile_pic}}" /></a></td>
+<td><a href="{% url user_details user_id=user.id %}"><img src="{{user.profile_pic}}" /></a></td>
 </tr>
 {% endfor %}
 <table>
