Fixing css and javascript directories under static folder.

--- a/core/templates/event_base.html
+++ b/core/templates/event_base.html
@@ -5,16 +5,16 @@
     <meta http-equiv="Content-type" content="text/html; charset=iso-8859-1" />
     <meta http-equiv="Content-Language" content="en-us" />
 
-    <script type="text/javascript" src="{% url static 'jquery-1.4.2.min.js' %}" ></script>
-    <script type="text/javascript" src="{% url static 'myjscript.js' %}" ></script>
-    <script type="text/javascript" src="{% url static 'jquery.tools.min.js' %}" ></script>
-    <script type="text/javascript" src="{% url static 'jquery.validate.js' %}" ></script>
+    <script type="text/javascript" src="{% url static 'javascript/jquery-1.4.2.min.js' %}" ></script>
+    <script type="text/javascript" src="{% url static 'javascript/myjscript.js' %}" ></script>
+    <script type="text/javascript" src="{% url static 'javascript/jquery.tools.min.js' %}" ></script>
+    <script type="text/javascript" src="{% url static 'javascript/jquery.validate.js' %}" ></script>
 	
- 	<link rel="stylesheet" href="{% url static 'style.css' %}" type="text/css" >
-	<link rel="stylesheet" href="{% url static '2stylez.css' %}" type="text/css" >
-	<link rel="stylesheet" href="{% url static '2home.css' %}" type="text/css" >
+ 	<link rel="stylesheet" href="{% url static 'css/style.css' %}" type="text/css" >
+	<link rel="stylesheet" href="{% url static 'css/2stylez.css' %}" type="text/css" >
+	<link rel="stylesheet" href="{% url static 'css/2home.css' %}" type="text/css" >
 	<!--[if IE]>
-	<link rel="stylesheet" type="text/css" href="{% url static '2ie.css' %}" />
+	<link rel="stylesheet" type="text/css" href="{% url static 'css/2ie.css' %}" />
 	<![endif]-->
 
 	{% block  js_css_include %}
