--- a/core/templates/test.html
+++ b/core/templates/test.html
@@ -5,16 +5,16 @@
     <meta http-equiv="Content-type" content="text/html; charset=iso-8859-1" />
     <meta http-equiv="Content-Language" content="en-us" />
 
-    <script type="text/javascript" src="{% url static 'jquery-1.4.2.min.js' %}" ></script>
-	<script type="text/javascript" src="{% url static 'myjscript.js' %}" ></script>
-    <script type="text/javascript" src="{% url static 'jquery.tools.min.js' %}" ></script>
-    <script type="text/javascript" src="{% url static 'ajaxfileupload.js' %}" ></script>
+    <script type="text/javascript" src="{% url static 'javascript/jquery-1.4.2.min.js' %}" ></script>
+	<script type="text/javascript" src="{% url static 'javascript/myjscript.js' %}" ></script>
+    <script type="text/javascript" src="{% url static 'javascript/jquery.tools.min.js' %}" ></script>
+    <script type="text/javascript" src="{% url static 'javascript/ajaxfileupload.js' %}" ></script>
 
-    <link type="text/css" href="{% url static 'ajaxfileupload.css' %}" rel="Stylesheet" />
-	<link type="text/css" href="{% url static 'jquery-ui-1.8.1.custom.css' %}" rel="Stylesheet" />	
-	<script type="text/javascript" src="{% url static 'jquery-ui-1.8.1.custom.js' %}"> 
+    <link type="text/css" href="{% url static 'css/ajaxfileupload.css' %}" rel="Stylesheet" />
+	<link type="text/css" href="{% url static 'css/jquery-ui-1.8.1.custom.css' %}" rel="Stylesheet" />	
+	<script type="text/javascript" src="{% url static 'css/jquery-ui-1.8.1.custom.js' %}"> 
  </script>
-<script type="text/javascript" src="{% url static 'jquery.timePicker.js' %}"></script>
+<script type="text/javascript" src="{% url static 'javascript/jquery.timePicker.js' %}"></script>
 <style type="text/css">
 div.time-picker {
   position: absolute;
