--- a/analytics/templates/analytics.html
+++ b/analytics/templates/analytics.html
@@ -4,15 +4,15 @@
 <meta http-equiv="X-UA-Compatible" content="IE=EmulateIE8">
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <title>CollectiveVIP</title>
-<link rel="stylesheet" href="{% url static 'blueprint/screen.css' %}" type="text/css" media="screen, projection">
-<link rel="stylesheet" href="{% url static 'blueprint/print.css' %}" type="text/css" media="print">	
-<!--[if lt IE 8]><link rel="stylesheet" href="{% url static 'blueprint/ie.css' %}" type="text/css" media="screen, projection"><![endif]-->
+<link rel="stylesheet" href="{% url static 'css/blueprint/screen.css' %}" type="text/css" media="screen, projection">
+<link rel="stylesheet" href="{% url static 'css/blueprint/print.css' %}" type="text/css" media="print">	
+<!--[if lt IE 8]><link rel="stylesheet" href="{% url static 'css/blueprint/ie.css' %}" type="text/css" media="screen, projection"><![endif]-->
 
 <link rel="stylesheet" type="text/css" href="{% url static 'analytics/base.css' %}">
 <link rel="stylesheet" type="text/css" href="{% url static 'analytics/header.css' %}">
 <link rel="stylesheet" type="text/css" href="{% url static 'analytics/content.css' %}">
 
-<script type="text/javascript" src="{% url static 'jquery-1.4.2.min.js' %}" ></script>	
+<script type="text/javascript" src="{% url static 'javascript/jquery-1.4.2.min.js' %}" ></script>	
 <script src="http://www.google.com/jsapi" type="text/javascript"></script> 
 </head>
 <body>
