--- a/core/templates/blogvip_flow.html
+++ b/core/templates/blogvip_flow.html
@@ -2,8 +2,8 @@
 
 {% block  js_css_include %}
 <!--<script src="http://maps.google.com/maps?file=api&amp;v=2&amp;sensor=false&amp;key={{map_key}}" type="text/javascript" > </script> -->
-<script type="text/javascript" src="{% url static 'jquery.cookie.js' %}" ></script>
-<link rel="stylesheet" href="{% url static 'overlay.css' %}" type="text/css" >
+<script type="text/javascript" src="{% url static 'javascript/jquery.cookie.js' %}" ></script>
+<link rel="stylesheet" href="{% url static 'css/overlay.css' %}" type="text/css" >
 {% endblock %}
 
 
