--- a/core/templates/create.html
+++ b/core/templates/create.html
@@ -1,21 +1,21 @@
 {% extends "event_base.html" %}
 
 {% block  js_css_include %}
-	<script type="text/javascript" src="{% url static 'jquery-ui-1.8.1.custom.js' %}"> 
+	<script type="text/javascript" src="{% url static 'javascript/jquery-ui-1.8.1.custom.js' %}"> 
  </script>
-<script type="text/javascript" src="{% url static 'jquery.ui.datepicker.js' %}"> </script>
-<script type="text/javascript" src="{% url static 'jquery.timePicker.js' %}"> </script>
-<script type="text/javascript" src="{% url static 'ajaxfileupload.js' %}"> </script>
-<script type="text/javascript" src="{% url static 'jquery.uploadify.js' %}"> </script>
+<script type="text/javascript" src="{% url static 'javascript/jquery.ui.datepicker.js' %}"> </script>
+<script type="text/javascript" src="{% url static 'javascript/jquery.timePicker.js' %}"> </script>
+<script type="text/javascript" src="{% url static 'javascript/ajaxfileupload.js' %}"> </script>
+<script type="text/javascript" src="{% url static 'javascript/jquery.uploadify.js' %}"> </script>
 <script src="http://maps.google.com/maps?file=api&amp;v=2&amp;sensor=false&amp;key={{key}}"
         type="text/javascript"></script> 
 
 
-	<link rel="stylesheet" href="{% url static 'calendar-system.css' %}" type="text/css" >
-	<link rel="stylesheet" href="{% url static 'calendar-en.css' %}" type="text/css" >
-	<link rel="stylesheet" href="{% url static 'jquery.calendar.css' %}" type="text/css" >
-<link rel="stylesheet" href="{% url static 'jquery.ptTimeSelect.css' %}" type="text/css" >	
-<link type="text/css" href="{% url static 'jquery-ui-1.8.1.custom.css' %}" rel="Stylesheet" />
+	<link rel="stylesheet" href="{% url static 'css/calendar-system.css' %}" type="text/css" >
+	<link rel="stylesheet" href="{% url static 'css/calendar-en.css' %}" type="text/css" >
+	<link rel="stylesheet" href="{% url static 'css/jquery.calendar.css' %}" type="text/css" >
+<link rel="stylesheet" href="{% url static 'css/jquery.ptTimeSelect.css' %}" type="text/css" >	
+<link type="text/css" href="{% url static 'css/jquery-ui-1.8.1.custom.css' %}" rel="Stylesheet" />
 
 
 {% endblock %} 
