--- a/core/templates/index_include.html
+++ b/core/templates/index_include.html
@@ -5,23 +5,23 @@
     <meta http-equiv="Content-type" content="text/html; charset=iso-8859-1" />
     <meta http-equiv="Content-Language" content="en-us" />
 
-    <script type="text/javascript" src="/simpz/site_media/jquery-1.4.2.min.js" ></script>
-    <script type="text/javascript" src="/simpz/site_media/myjscript.js" ></script>
-    <script type="text/javascript" src="/simpz/site_media/jquery.tools.min.js" ></script>
-    <script type="text/javascript" src="/simpz/site_media/jquery.validate.js" ></script>
-    <script type="text/javascript" src="/simpz/site_media/jquery.cookie.js" ></script>
+    <script type="text/javascript" src="/simpz/site_media/javascript/jquery-1.4.2.min.js" ></script>
+    <script type="text/javascript" src="/simpz/site_media/javascript/myjscript.js" ></script>
+    <script type="text/javascript" src="/simpz/site_media/javascript/jquery.tools.min.js" ></script>
+    <script type="text/javascript" src="/simpz/site_media/javascript/jquery.validate.js" ></script>
+    <script type="text/javascript" src="/simpz/site_media/javascript/jquery.cookie.js" ></script>
 
 	{% block  js_css_include %}
 	{% endblock %}
 
-	<link rel="stylesheet" href="/simpz/site_media/blueprint/screen.css" type="text/css" media="screen, projection" >
-    <link rel="stylesheet" href="/simpz/site_media/blueprint/print.css" type="text/css" media="print" >
-    <link rel="stylesheet" href="/simpz/site_media/style.css" type="text/css" >
-	<link rel="stylesheet" type="text/css" href="/simpz/site_media/2stylez.css">
+	<link rel="stylesheet" href="/simpz/site_media/css/blueprint/screen.css" type="text/css" media="screen, projection" >
+    <link rel="stylesheet" href="/simpz/site_media/css/blueprint/print.css" type="text/css" media="print" >
+    <link rel="stylesheet" href="/simpz/site_media/css/style.css" type="text/css" >
+	<link rel="stylesheet" type="text/css" href="/simpz/site_media/css/2stylez.css">
 	<!--[if IE]>
-	<link rel="stylesheet" type="text/css" href="/simpz/site_media/2ie.css" />
+	<link rel="stylesheet" type="text/css" href="/simpz/site_media/css/2ie.css" />
 	<![endif]-->
-	<link rel="stylesheet" type="text/css" href="/simpz/site_media/2home.css">
+	<link rel="stylesheet" type="text/css" href="/simpz/site_media/css/2home.css">
     
     <title>{% block title %} {% endblock %}</title>
 </head>
