--- a/frontpage/templates/frontpage.html
+++ b/frontpage/templates/frontpage.html
@@ -4,7 +4,7 @@
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
 <meta http-equiv="Content-Style-Type" content="text/css">
 <title>CollectiveVIP - Beta</title>
-<link type="text/css" href="{% url static 'frontpage_style.css' %}" rel="stylesheet">
+<link type="text/css" href="{% url static 'css/frontpage_style.css' %}" rel="stylesheet">
 </head>
 
 <body>
