--- a/static/css/overlay.css
+++ b/static/css/overlay.css
@@ -35,7 +35,7 @@
 	left: 0px;
 	height: 40px;
 	width: 100%;
-	background-image: url(images/overlaytop-bg.png);
+	background-image: url(../images/overlaytop-bg.png);
 	/* CSS3 styling for latest browsers */	
 	-moz-border-radius-topleft: 10px;
 	-webkit-border-top-left-radius: 10px;
@@ -55,7 +55,7 @@
 	left: 0px;
 	height: 46px;
 	width: 100%;
-	background-image: url(images/overlaybot-bg.png);
+	background-image: url(../images/overlaybot-bg.png);
 	/* CSS3 styling for latest browsers */	
 	-moz-border-radius-bottomleft: 12px;
 	-webkit-border-bottom-left-radius: 12px;
@@ -64,7 +64,7 @@
 	}
 
 .overlay-blogger .close{ 	
-		     background-image:url(images/close.png);
+		     background-image:url(../images/close.png);
 		     position: absolute;
 		     right: 4px;
 		     top: 2px;  
@@ -161,7 +161,7 @@
 	width: 421px;
 	margin-left: 20px;
 	height: 53px;
-	background-image: url(images/code.png);
+	background-image: url(../images/code.png);
 	}
 #code p{
 	font-size: 32px;
