Adding changes to fix some stuff.

--- a/analytics/templates/analytics.html
+++ b/analytics/templates/analytics.html
@@ -8,9 +8,9 @@
 <link rel="stylesheet" href="{% url static 'css/blueprint/print.css' %}" type="text/css" media="print">	
 <!--[if lt IE 8]><link rel="stylesheet" href="{% url static 'css/blueprint/ie.css' %}" type="text/css" media="screen, projection"><![endif]-->
 
-<link rel="stylesheet" type="text/css" href="{% url static 'analytics/base.css' %}">
-<link rel="stylesheet" type="text/css" href="{% url static 'analytics/header.css' %}">
-<link rel="stylesheet" type="text/css" href="{% url static 'analytics/content.css' %}">
+<link rel="stylesheet" type="text/css" href="{% url static 'css/analytics/base.css' %}">
+<link rel="stylesheet" type="text/css" href="{% url static 'css/analytics/header.css' %}">
+<link rel="stylesheet" type="text/css" href="{% url static 'css/analytics/content.css' %}">
 
 <script type="text/javascript" src="{% url static 'javascript/jquery-1.4.2.min.js' %}" ></script>	
 <script src="http://www.google.com/jsapi" type="text/javascript"></script> 
