Adding analytics totals info .

--- a/analytics/templates/analytics.html
+++ b/analytics/templates/analytics.html
@@ -41,6 +41,13 @@
 			</div>
 			
 			     <br/><br/>
+	 <p>Total Facebook Shares: &nbsp; {{total_facebook_shares}}</p>
+   	 <p>Total Twitter Shares: &nbsp; {{total_twitter_shares}}</p>
+	 <p>Total Shares: &nbsp; {{total_shares}}</p>
+	 <p>Total Facebook Reach: &nbsp; {{total_facebook_reach}}</p>
+	 <p>Total Twitter Reach: &nbsp; {{total_twitter_reach}}</p>
+	 <p>Total Reach: &nbsp; {{total_reach}}</p>
+
 	 <H1>Distribution by Date</H1>
 
 	 <select id="chart-date-type">
