--- a/analytics/templates/analytics.html
+++ b/analytics/templates/analytics.html
@@ -12,12 +12,14 @@
 <link rel="stylesheet" type="text/css" href="{% url static 'css/analytics/header.css' %}">
 <link rel="stylesheet" type="text/css" href="{% url static 'css/analytics/content.css' %}">
 
-<script src="http://connect.facebook.net/en_US/all.js"></script>
+
 <script type="text/javascript" src="{% url static 'javascript/jquery-1.4.2.min.js' %}" ></script>	
 <script src="http://www.google.com/jsapi" type="text/javascript"></script> 
 </head>
 <body>
+
 <div id="wrapper">
+
 	<div class="container">
 		<div id="header" class="span-24 last">
 					<div id="links" class="span-7 prepend-15 last"><a href="#">Get CollectiveVIP</a> &nbsp;&nbsp; <a href="#">How it Works</a> &nbsp;&nbsp; <a href="#">Contact</a></div>
@@ -100,6 +102,8 @@
 	 <H1>Breakdown of Sources</H1>
 	 <div id="pie_sources" style='height:300px; width: 900px;'></div>
      <H1>User Shares</H1> 
+<script src="http://connect.facebook.net/en_US/all.js"></script>
+<div id="fb-root"></div>
     <div id="table_analytics_data"></div> 
     
     
@@ -114,6 +118,7 @@
 
     <br/>
 	<script> 
+	      FB.init({appId: '{{fbappid}}', status: true, cookie: true, xfbml: true});
 	      google.load("visualization", "1", {packages:["table", "piechart", "corechart"]});
 	      google.setOnLoadCallback(drawGraphs);
 
@@ -192,7 +197,7 @@
 
 					data_table.draw(json_data,
 	                                {allowHtml : true,
-			           	{title : "Reach Date Distribution", 
+			           	title : "Reach Date Distribution", 
 			            	width:960, height:200,
 			            	hAxis: {title: data.range_type_label, titleColor: "red"}}
 			      		);
